dark mode fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,51 @@
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body.dark-mode {
+  background-color: #1f2937;
+  color: #f3f4f6;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+body.dark-mode a {
+  color: #93c5fd;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+body.dark-mode a:hover {
+  color: #bfdbfe;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+body.dark-mode button {
+  background-color: #b9c3d1;
+  color: #030711;
+  border-color: #0441ba;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+body.dark-mode button:hover {
+  border-color: #93c5fd;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+body.dark-mode input,
+body.dark-mode textarea {
+  background-color: #dde2ea;
+  color: #cfd7e5;
+  border-color: #6b7280;
+}
+
+
+body.dark-mode input::placeholder,
+body.dark-mode textarea::placeholder {
+  color: #040c1c;
+}
+
+body.dark-mode .bg-purple-100 {
+  background-color: #374151;
+}
+
+body.dark-mode .bg-purple-200 {
+  background-color: #4b5563;
+}
+
+body.dark-mode .bg-purple-300 {
+  background-color: #dadfeb;
+}
+
+body.dark-mode .text-black {
+  color: #3c3e41;
+}
